tests/ui/item-is-not-a-function.stderr
error: item is not a function

         = help: `#[server_send(...)]` can only be used on functions

 --> tests/ui/item-is-not-a-function.rs:4:1
  |
4 | struct S;
  | ^^^^^^^^^
