tests/ui/item-is-not-a-function.rs
use tracing_attributes_http::server_send;

#[server_send]
struct S;

fn main() {}
